--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,6 @@
 			let shelf = document.getElementsByClassName("c-shelf")[0];
 
 			volumes.forEach(volume => {
-				<!--console.log(volume.book)-->
 				let li = document.createElement('LI');
 				let text = document.createElement('H2');
 				let img = document.createElement('IMG');
@@ -53,7 +52,6 @@
 				text.innerHTML = volume.book.title.split(':')[0];
 				text.classList.add("c-shelf__volume__title");
 				img.src = `covers/${volume.book.ISBN[1].identifier}.jpg`;
-				console.dir(img)
 				link.classList.add("c-shelf__link");
 				figure.classList.add("c-cover");
 
@@ -66,6 +64,31 @@
 
 		}
 
+		function sortBooks(volumes) {
+			console.log(volumes)
+
+			volumes.sort((a, b) => { 
+				if ( a.sync && b.sync) 
+				{
+					return new Date(a.sync) - new Date(b.sync)
+				} 
+				else if (a.sync) 
+				{
+					return -1
+				}
+				else if (b.sync) 
+				{
+					return 1
+				}
+
+				return 0;
+			});
+
+			console.log(volumes)
+
+			return volumes;
+		}
+
 		function parse(doc) {
 			const result = [];
 			doc.forEach((doc) => { 
@@ -74,12 +97,14 @@
 			return result;
 		}
 
+
 		function getVolumes() {
 			const myData = firebase
 			.firestore()
 			.collection("volumes")
 			.get()
 				.then(parse)
+				.then(sortBooks)
 				.then(render)
 		}
 
