--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Welcome to Firebase Hosting</title>
+		<title>Jonathan Striblet's Bookshelf</title>
 	
 		<!-- The core Firebase JS SDK is always required and must be listed first -->
 
@@ -55,7 +55,7 @@
 				li.classList.add("c-shelf__volume")
 				text.innerHTML = volume.book.title.split(':')[0];
 				text.classList.add("c-shelf__volume__title");
-				img.src = `covers/${coverName}.jpg`;
+				img.src = `./covers/${coverName}.jpg`;
 				link.classList.add("c-shelf__link");
 				link.href = `volume.html?id=${id}`
 				figure.classList.add("c-cover");
@@ -72,21 +72,21 @@
 		function sortBooks(volumes) {
 
 			volumes.sort((a, b) => { 
-				if ( a.sync && b.sync) 
+				console.log(a.book.sync, ' ', b.book.sync)
+				if ( a.book.sync && b.book.sync) 
 				{
-					return new Date(a.sync) - new Date(b.sync)
+					return new Date(a.book.sync) - new Date(b.book.sync)
 				} 
-				else if (a.sync) 
+				else if (a.book.sync) 
 				{
 					return -1
 				}
-				else if (b.sync) 
+				else if (b.book.sync) 
 				{
 					return 1
 				}
 				return 0;
 			});
-      console.log(volumes)
 			return volumes;
 		}
 
