--- a/public/index.html
+++ b/public/index.html
@@ -72,19 +72,12 @@
 		function sortBooks(volumes) {
 
 			volumes.sort((a, b) => { 
-				console.log(a.book.sync, ' ', b.book.sync)
 				if ( a.book.sync && b.book.sync) 
-				{
-					return new Date(a.book.sync) - new Date(b.book.sync)
-				} 
-				else if (a.book.sync) 
-				{
+					return new Date(b.book.sync) - new Date(a.book.sync)
+				if (a.book.sync) 
 					return -1
-				}
-				else if (b.book.sync) 
-				{
+				if (b.book.sync) 
 					return 1
-				}
 				return 0;
 			});
 			return volumes;
