--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
 
 	<script>
 
+		let xhttp = new XMLHttpRequest();
+
 		function render(volumes) {
 			let shelf = document.getElementsByClassName("c-shelf")[0];
 
@@ -47,24 +49,34 @@
 				let img = document.createElement('IMG');
 				let link = document.createElement('A');
 				let figure = document.createElement('FIGURE');
-					let coverName = 'Default'; 
-				if (volume.book.id) {
-					coverName = id;
+				let coverName = 'Default'; 
+
+				xhttp.open("GET", `covers/${id}.jpg`, false);
+				xhttp.send();
+
+				xhttp.onreadystatechange = function() {
+					if (this.status) {
+						if (this.status == 200) {
+							coverName = id;
+						}
+						console.log(this.status)
+						console.log('/covers/ ' + coverName)
+
+						li.classList.add("c-shelf__volume")
+						text.innerHTML = volume.book.title.split(':')[0];
+						text.classList.add("c-shelf__volume__title");
+						img.src = `./covers/${coverName}.jpg`;
+						link.classList.add("c-shelf__link");
+						link.href = `volume.html?id=${id}`
+						figure.classList.add("c-cover");
+
+						figure.appendChild(img);
+						link.appendChild(figure);
+						link.appendChild(text);
+						li.appendChild(link);
+						shelf.appendChild(li);
+					}
 				}
-
-				li.classList.add("c-shelf__volume")
-				text.innerHTML = volume.book.title.split(':')[0];
-				text.classList.add("c-shelf__volume__title");
-				img.src = `./covers/${coverName}.jpg`;
-				link.classList.add("c-shelf__link");
-				link.href = `volume.html?id=${id}`
-				figure.classList.add("c-cover");
-
-				figure.appendChild(img);
-				link.appendChild(figure);
-				link.appendChild(text);
-				li.appendChild(link);
-				shelf.appendChild(li);
 			});
 
 		}
