tracking down async error

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 							coverName = id;
 						}
 						console.log(this.status)
+						console.log(this.status)
 						console.log('/covers/ ' + coverName)
 
 						li.classList.add("c-shelf__volume")
