--- a/public/volume.html
+++ b/public/volume.html
@@ -1,1 +1,135 @@
-im in a volume
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-59986301-2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-59986301-2');
+		</script>
+
+		<script src="/__/firebase/7.19.0/firebase-app.js"></script>
+		<!-- include only the Firebase features as you need -->
+		<script src="/__/firebase/7.19.0/firebase-auth.js"></script>
+		<script src="/__/firebase/7.19.0/firebase-database.js"></script>
+		<script src="/__/firebase/7.19.0/firebase-messaging.js"></script>
+		<script src="/__/firebase/7.19.0/firebase-storage.js"></script>
+		<script src="/__/firebase/7.19.0/firebase-firestore.js"></script>
+
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>The Truths We Hold by Kamala Harris</title>
+		<meta name="description" content="Jonathan's highlights and notes from {book}.">
+
+		<link rel="stylesheet" type="text/css" href="/index.css">
+		<link rel="SHORTCUT ICON" href="/favicon.png">
+	</head>
+
+	<body>
+		<div id="root">
+			<nav class="c-nav"><a href="/">← Browse all reads</a></nav>
+
+			<main class="l-container l-container--highlights">
+
+				<header class="c-volume-header">
+					<figure class="c-cover">
+						<img srcset="https://sawyer-highlights.imgix.net/volume/covers/kamala?w=250&amp;h=400&amp;fit=crop&amp;q=50&amp;auto=format&amp;dpr=1 1x, https://sawyer-highlights.imgix.net/volume/covers/kamala?w=250&amp;h=400&amp;fit=crop&amp;q=50&amp;auto=format&amp;dpr=2 2x" src="https://sawyer-highlights.imgix.net/volume/covers/kamala?w=250&amp;h=400&amp;fit=crop&amp;q=50&amp;auto=format" alt="The Truths We Hold">
+					</figure>
+					<h1 class="u-antialiased">The Truths We Hold</h1>
+					<h2 class="u-antialiased">An American Journey</h2>
+					<p class="c-volume-header__authors u-family-mono">Kamala Harris</p>
+				</header>
+
+				<article class="c-highlight">
+					<blockquote class="c-highlight__body">
+						<p><span>First, my name is pronounced “comma-la,” like the punctuation mark. It means “lotus flower,” which is a symbol of significance in Indian culture. A lotus grows underwater, its flower rising above the surface while its roots are planted firmly in the river bottom.</span></p>
+					</blockquote>
+					<div class="c-highlight__nav u-family-mono"><a href="/highlights/KAD3VtfU0UVTTZw4OjBr">Link</a> · 115</div>
+				</article>
+
+				<article class="c-highlight"><blockquote class="c-highlight__body"><p><span>I had a sense that I wanted to be a prosecutor, that I wanted to be on the front lines of criminal justice reform, that I wanted to protect the vulnerable.</span></p>
+					</blockquote><div class="c-highlight__nav u-family-mono"><a href="/highlights/OWa5A1Pg0ljL1gCUTZGS">Link</a> · 3437</div>
+				</article>
+
+			</main>
+
+		</div>
+	</body>
+
+	<script src="./FirebaseConfig.js"></script>	
+
+	<script>
+
+		let xhttp = new XMLHttpRequest();
+
+function render(volumes) {
+	let shelf = document.getElementsByClassName("c-shelf")[0];
+
+	volumes.forEach(volume => {
+		let id = volume.book.id;
+		let li = document.createElement('LI');
+		let text = document.createElement('H2');
+		let img = document.createElement('IMG');
+		let link = document.createElement('A');
+		let figure = document.createElement('FIGURE');
+		let coverName = 'Default'; 
+
+		xhttp.open("GET", `covers/${id}.jpg`, false);
+		xhttp.send();
+
+		if (xhttp.status == 200) {
+			coverName = id;
+		} else {
+			coverName = 'Default';
+		}
+
+		li.classList.add("c-shelf__volume")
+		text.innerHTML = volume.book.title.split(':')[0];
+		text.classList.add("c-shelf__volume__title");
+		img.src = `./covers/${coverName}.jpg`;
+		link.classList.add("c-shelf__link");
+		link.href = `volume.html?id=${id}`
+		figure.classList.add("c-cover");
+
+		figure.appendChild(img);
+		link.appendChild(figure);
+		link.appendChild(text);
+		li.appendChild(link);
+		shelf.appendChild(li);
+	});
+
+}
+
+function renderHeader(book) {
+	console.log('Rendering Header.....')
+	console.log('DONE')
+}
+
+function renderHighlights(book) {
+	console.log('Rendering Highlights.....')
+	console.log('DONE')
+}
+
+async function getVolume() {
+
+	const id = window.location.href.split('=')[1]
+	const bookRef = firebase.firestore().collection("volumes").doc(id);
+	const doc = await bookRef.get();
+
+	if (!doc.exists) {
+		console.log('No such document!');
+	} else {
+		console.log('Document data:', doc.data());
+		renderHeader(doc.data())
+		renderHighlights(doc.data())
+	}
+}
+
+getVolume();
+
+	</script>
+
+</html>
