migrating creating index to server side

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
 				} else {
 					coverName = 'Default';
 				}
+				console.log(id)
 
 				li.classList.add("c-shelf__volume")
 				text.innerHTML = volume.book.title.split(':')[0];
