--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,13 @@
 				</ul>
 			</main>
 		</div>
+
+		<hr>
+
+		<footer class="footer">
+			<p>Made with ❤️ in Oakland</p>
+		</footer>
+
 	</body>
 
 	<!-- Import the firebase configuration and initialize -->
